gcc/testsuite/rust/rustc/ui/tool-attributes/tool-attributes-misplaced-2.rs
#[derive(rustfmt::skip)] // { dg-error "" "" { target *-*-* } }
struct S;

fn main() {
    rustfmt::skip!(); // { dg-error "" "" { target *-*-* } }
}

